[package]
name = "launchdarkly"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]

[dependencies]
futures = "0.1"
hyper = "0.11"
hyper-tls = { optional = true, version = "0.1.2" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "*"
error-chain = "0.11"
tokio-core = "0.1"
log = "0.4"

[features]
default = ["tls"]
tls = ["hyper-tls"]