[package]
name = "launchdarkly"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for launch darkly"
documentation = "https://softprops.github.io/hubcaps"
homepage = "https://github.com/softprops/launchdarkly"
repository = "https://github.com/softprops/launchdarkly"
keywords = ["hyper", "launchdarkly", "feature-flags", "flags", "canary"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
futures = "0.1"
hyper = "0.11"
hyper-tls = { optional = true, version = "0.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
error-chain = "0.11"
tokio-core = "0.1"
log = "0.4"

[features]
default = ["tls"]
tls = ["hyper-tls"]